tests/regexp/regexp.exp
Error --------------------------------------------------------------------------------------------------- regexp.js:2:20

Cannot assign `patt.test(...)` to `match` because boolean [1] is incompatible with number [2]. [incompatible-type]

   regexp.js:2:20
     2| var match:number = patt.test("Hello world!");
                           ^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   <BUILTINS>/core.js:399:27
   399|     test(string: string): boolean;
                                  ^^^^^^^ [1]
   regexp.js:2:11
     2| var match:number = patt.test("Hello world!");
                  ^^^^^^ [2]



Found 1 error
